Fix config heder, improve config handling